staticfiles/css/style.css
/*
* Prefixed by https://autoprefixer.github.io
* PostCSS: v8.4.14,
* Autoprefixer: v10.4.7
* Browsers: last 4 version
*/

/* Google Font import */
@import url('https://fonts.googleapis.com/css2?family=Eagle+Lake&family=Gudea:ital,wght@0,400;0,700;1,400&display=swap');

/* VARIABLES */
:root {
    --headings-font: "Eagle Lake", cursive;
    --main-font: "Gudea", sans-serif;
    --primary-color: #30011E; /* Dark Purple */
    --secondary-color: #D7FCD4; /* Tea Green */
    --tertiary-color: #B6CCA1; /* Celadon */
}

/* GLOBAL STYLES */
body {
    background-color: var(--primary-color);
    font-family: var(--main-font);
    color: var(--secondary-color);
}

h1, h2, h3 {
    font-family: var(--headings-font);
}

.status-notification {
    padding-right: 30px;
}

.alert {
    width: 320px;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
}

/* Sets the hero image to use as the background for all pages via class blocks */
.main-image {
    /* background-image: url('../img/hero-image.jpg'); */
    background-image: url('../img/hero-image.jpg');
    background-size: cover;
    background-position: center top;
    background-repeat: no-repeat;
    min-height: 100vh;
    width: 100vw;
}

/* Custom styling for navigation bar */

nav {
    background-color: var(--primary-color);
    font-family: var(--main-font);
}

.navbar-header {
    margin-right: 20px;
}

.nav-link {
    color: var(--secondary-color);
    font-family: var(--main-font);
    text-align: center;
}

.nav-link:hover, .nav-link:focus {
    color: var(--tertiary-color);
}

.navbar-toggler {
    background-color: var(--secondary-color);
}

.cta-button {
    background-color: var(--secondary-color);
    color: var(--primary-color);
    font-weight: bold;
    font-size: large;
    border-radius: 5px;
    padding: 10px;
    margin-left: auto;
    margin-right: auto;
    width: 120px;
    text-align: center;
}

.cta-button:hover, 
.cta-button:focus {
    background-color: var(--tertiary-color);
    color: var(--primary-color);
    text-decoration: none;
}

/* Custom styling for footer */

footer {
    font-size: smaller;
    color: var(--secondary-color);
    padding-top: 20px;
    padding-bottom: 20px;
}

#opening-times i {
    color: var(--secondary-color);
    font-size: 200%;
    margin-right: 5px;
}

/* Custom styling for homepage */
.about, .homepage-header {
    border: solid 5px var(--secondary-color);
    border-radius: 10px;
    padding: 10px;
    background-color: var(--primary-color);
}

.about {
    margin-bottom: 30px;
}

.about h2 {
    margin-bottom: 30px;
}

.homepage-header {
    margin-bottom: 50px;
    width: 350px;
    margin-left: auto;
    margin-right: auto;
}

/* Custom styling for reservation_list.html */
#reservation-list-header {
    text-align: center;
    width: 300px;
    background-color: var(--primary-color);
    margin-left: auto;
    margin-right: auto;
    padding: 10px;
    border: solid 5px var(--tertiary-color);
    border-radius: 10px;
    font-size: small;
    margin-bottom: 20px;
}

#reservation-table {
    width: 50%;
    margin-top: 30px;
    margin-left: auto;
    margin-right: auto;
    border: solid 5px var(--secondary-color);
}

#reservation-table th {
    background-color: var(--secondary-color);
}

#reservation-table td {
    background-color: var(--primary-color);
    color: var(--secondary-color);
}

#manage-booking-col {
    text-align: right;
}

#delete-reservation-button, 
#edit-reservation-button {
    border: solid var(--primary-color) 3px;
    border-radius: 7px;
    background-color: var(--secondary-color);
    color: var(--primary-color);
}

#edit-reservation-button:hover,
#edit-reservation-button:focus {
    background-color: #FFFFC5; /* Light Yellow */
}

#delete-reservation-button:hover,
#delete-reservation-button:focus {
    background-color: #FFCCCB; /* Light Yellow */
}

#no-booking-message {
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 20px;
    text-align: center;
    width: 180px;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    padding: 10px;
    color: var(--primary-color);
    background-color: var(--tertiary-color);
    border: solid 3px var(--primary-color);
}

/* Custom styling for reservation_form.html */
#reservation-form {
    text-align: center;
    background-color: #30011E;
    margin-left: auto;
    margin-right: auto;
    width: 300px;
    padding: 10px;
    border: solid 5px var(--tertiary-color);
    border-radius: 10px;
}

.small_form_field {
    max-width: 200px;
    width: 100%;
    display: block;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
}

.form_text_area {
    width: 250px;
    text-align: left;
}

#submit_booking_button {
    background-color: var(--secondary-color);
}

#submit_booking_button:hover,
#submit_booking_button:focus {
    background-color: var(--tertiary-color);
    color: var(--primary-color);
}

/* Custom styling for menu_list.html */
#menu-list-header {
    text-align: center;
    width: 200px;
    background-color: #30011E;
    margin-left: auto;
    margin-right: auto;
    padding: 10px;
    border: solid 5px var(--tertiary-color);
    border-radius: 10px;
    margin-bottom: 30px;
}

.menu-section {
    width: 300px;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 20px;
    padding: 10px;
    color: var(--primary-color);
    background-color: var(--tertiary-color);
    border: solid 5px var(--primary-color);
    font-size: small;
}

.menu-section td, th {
    background-color: var(--tertiary-color) !important;
}

.table {
    --bs-table-border-color: var(--primary-color);
}

.price-col {
    text-align: right;
    min-width: 75px;
}

/* Custom styling for All Auth authentication pages */
#signout-btn, 
#signin-btn,
#signup-btn {
    background-color: var(--secondary-color);
    color: var(--primary-color);
}

#signout-btn:hover, 
#signin-btn:hover,
#signup-btn:hover,
#signout-btn:focus, 
#signin-btn:focus,
#signup-btn:focus {
    background-color: var(--tertiary-color);
    color: var(--primary-color);
}

#signin-div, 
#signup-div {
    margin-left: auto;
    margin-right: auto;
    width: 500px;
    padding: 10px;
    border: solid 5px var(--tertiary-color);
    border-radius: 10px;
    background-color: var(--primary-color);
}

#signin-btn {
    margin-left: 45px;
}

#signup-div {
    padding: 20px;
}

#signup-div ul {
    max-width: 400px;
}

#signin-check {
    width: 400px;
}

#signin-link, 
#signup-link {
    color: var(--tertiary-color);
    font-weight: bold;
}

#signup-btn {
    margin-left: 120px;
}

#signout-div {
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    width: 500px;
    padding: 10px;
    border: solid 5px var(--tertiary-color);
    border-radius: 10px;
    background-color: var(--primary-color);
}

/* Media Queries */

/* Medium screens (tablet, 768px and up) */
@media screen and (min-width: 768px) {
    /* Custom styling for homepage.html */
    .about p {
        font-size: large;
    }

    /* Custom styling for reservation_list.html */
    #reservation-list-header {
        width: 500px;
        font-size: larger;
    }
    
    #reservation-table {
        width: 70%;
    }

    /* Custom styling for menu_list.html */
    .menu-section {
        width: 600px;
        font-size: medium;
    }
}

/* Large screens (laptop, 992px and up) */
@media screen and (min-width: 992px) {
    .cta-button {
        margin-right: 10px;
    }
}

